--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,16 @@ language: python
 python:
   - "3.7"
 
+service:
+  - mysql
+
+before_install:
+  - mysql -e 'CREATE DATABASE jurassic_park;'
+  - mysql -e "CREATE USER 'dinouser'@'localhost' identified by 'dino123@';"
+  - mysql -e "GRANT ALL PRIVILEGES ON dinouser.* TO 'jurassic_park'@'localhost';"
+  - mysql -e "GRANT ALL PRIVILEGES ON dinouser.* TO 'test_jurassic_park'@'localhost';"
+  - mysql -e "FLUSH PRIVILEGES;"
+
 install:
   - sudo apt-get update
   - sudo apt-get install -y build-essential python3-dev python3-setuptools python3-wheel python3-cffi libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info
