Agrega coverage a travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ before_script:
   - pip install -r requirements.txt
 
 script: 
-  -  python manage.py test dinosaurios
+  - python manage.py test dinosaurios
+  - coverage run --branch --source='.' --omit=*test*,*migrations*,*__init*,*settings*,*apps*,*wsgi*,*admin.py,*asgi.py,manage.py,*urls.py manage.py test
+  - coverage report -m --fail-under 80
 notifications:
 email: false
