--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ service:
 before_install:
   - mysql -e 'CREATE DATABASE jurassic_park;'
   - mysql -e "CREATE USER 'dinouser'@'localhost' identified by 'dino123@';"
-  - mysql -e "GRANT ALL PRIVILEGES ON dinouser.* TO 'jurassic_park'@'localhost';"
-  - mysql -e "GRANT ALL PRIVILEGES ON dinouser.* TO 'test_jurassic_park'@'localhost';"
+  - mysql -e "GRANT ALL PRIVILEGES ON jurassic_park.* TO 'dinouser'@'localhost';"
+  - mysql -e "GRANT ALL PRIVILEGES ON test_jurassic_park.* TO 'dinouser'@'localhost';"
   - mysql -e "FLUSH PRIVILEGES;"
 
 install:
