--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 
 install:
   - sudo apt-get update
-  - sudo apt-get install -y build-essential python3-dev python3-setuptools python3-wheel python3-cffi libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info
+  - sudo apt-get install -y build-essential python3-dev python3-setuptools python3-wheel python3-cffi libcairo2 libpango-1.0-0 libpangocairo-1.0-0 python3-brotli libharfbuzz0b libpangoft2-1.0-0 libgdk-pixbuf2.0-0 libffi-dev shared-mime-info
 
 before_script: 
   - pip install -r requirements.txt
